force-app/main/default/objects/Community_Feed__c/Community_Feed__c.object-meta.xml
<CustomObject>
    <label>Community Feed</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Community Feed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>