force-app/main/default/objects/Community_Feed__c/fields/Comment_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Comment_Owner_Email__c</fullName>
    <label>Comment Owner Email</label>
    <type>Email</type>
</CustomField>