force-app/main/default/objects/Community_Feed__c/fields/Community_Feed_Parent__c.field-meta.xml
<CustomField>
    <fullName>Community_Feed_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Feed Parent</label>
    <referenceTo>Community_Feed__c</referenceTo>
    <relationshipLabel>Community Feeds</relationshipLabel>
    <relationshipName>Community_Feeds</relationshipName>
    <type>Lookup</type>
</CustomField>