force-app/main/default/objects/Community_Feed__c/fields/FeedCommentId__c.field-meta.xml
<CustomField>
    <fullName>FeedCommentId__c</fullName>
    <label>FeedCommentId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>