force-app/main/default/objects/Community_Feed__c/fields/FeedItemId__c.field-meta.xml
<CustomField>
    <fullName>FeedItemId__c</fullName>
    <label>FeedItemId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>