force-app/main/default/objects/Community_Feed__c/fields/InsertedById__c.field-meta.xml
<CustomField>
    <fullName>InsertedById__c</fullName>
    <label>InsertedById</label>
    <length>25</length>
    <type>Text</type>
</CustomField>