force-app/main/default/objects/Community_Feed__c/fields/Parent_Comment_Title__c.field-meta.xml
<CustomField>
    <fullName>Parent_Comment_Title__c</fullName>
    <label>Parent Comment Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>