force-app/main/default/objects/Community_Feed__c/fields/Parent_Community_Nick_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Community_Nick_Name__c</fullName>
    <formula>Community_Feed_Parent__r.CreatedBy.CommunityNickname</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent &apos;s Community Nick Name</label>
    <type>Text</type>
</CustomField>