force-app/main/default/objects/Community_Feed__c/fields/Parent_s_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Parent_s_Created_Date_Time__c</fullName>
    <formula>Community_Feed_Parent__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent&apos;s  Created Date Time</label>
    <type>DateTime</type>
</CustomField>