force-app/main/default/objects/Community_Feed__c/fields/Parentfeed__c.field-meta.xml
<CustomField>
    <fullName>Parentfeed__c</fullName>
    <label>Parentfeed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>