force-app/main/default/objects/Community_Feed__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>ParentId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>