force-app/main/default/objects/Community_Feed__c/fields/Post_Title__c.field-meta.xml
<CustomField>
    <fullName>Post_Title__c</fullName>
    <label>Post Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>