force-app/main/default/objects/Community_Feed__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <formula>IF(  CreatedById == Community_Feed_Parent__r.CreatedById , False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send  Email</label>
    <type>Checkbox</type>
</CustomField>